[package]
name = "wgpu-toy"
version = "0.1.0"
authors = ["Andy Philpotts <andy@failfree.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.4.0"
winit = "0.20.0"
log = "0.4.0"
env_logger = "0.7.1"
glsl-to-spirv = "0.1.7"

